fix: Ensure Java 8 compatibility
- Replaced String.isBlank() with (str == null || str.trim().isEmpty())
  or (str != null && !str.trim().isEmpty()) in McpService.java and
  McpController.java, as isBlank() is Java 11+.
- Replaced Map.of() with Collections.emptyMap() in LargeModelService.java
  for Java 8 compatibility (Map.of() is Java 9+).
- Added import for java.util.Collections where needed.

These changes address your feedback regarding the use of APIs not available
in Java 8.